--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "pixi-particles": "^4.3.1",
     "pixi.js": "^6.3.0"
   },
   "devDependencies": {
